--- a/testin/WebContent/html/pageOne.html
+++ b/testin/WebContent/html/pageOne.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 <h1>Details</h1>
-<form method = "post" action = "pageOneProcess">
+<form method = "post" action = "/testin/pageOneProcess">
 Name: <input type = "text" name = "name">
-</br>
+<br>
 Id: <input type = "text" name = "id">
-</br>
+<br>
 
-<input type = "button" value = "submit">
+<input type = "submit" value = "submit">
 </form>
 </body>
 </html>
