--- a/testin/WebContent/html/pageTwo.html
+++ b/testin/WebContent/html/pageTwo.html
@@ -5,12 +5,12 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form method = "post" action = "pageTwoProcess">
+<form method = "post" action = "/testin/pageTwoProcess">
 <h1>College Information</h1>
 Faculty: <input type = text name = "faculty">
-</br>
+<br>
 Course: <input type = text name = "course">
-</br>
+<br>
 <input type = submit value = "submit">
 </form>
 </body>
